# csv-transformer

./: .gitignore  README.md  pyproject.toml
data/: output.csv  transformation_definition.json
src/csv_transformer/: cli.py
src/csv_transformer/common/: constants.py  logger.py  parsers.py  utils.py
src/csv_transformer/models/: transformer_model.py
src/csv_transformer/services/: csv_transformer_service.py  dataset_transformer_service.py
src/csv_transformer/transformers/: __init__.py  format_date_transformer.py  redact_data_transformer.py  transformers_factory.py  uuid_to_int_transformer.py
tests/: test_cli.py  test_parser.py  test_transformers.py
