[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["csv_transformer"]

[project]
name = "csv_transformer"
version = "1.0.0"
description = "Python command line application that allows a user to transform an existing dataset into a dataset with a different format."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "arrow>=1.3.0"
]

[project.urls]
repository = "https://github.com/mgalletti/csv-transform.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
csv-transform = "csv_transformer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"